# AIDecision

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: deploy-supabase.yml
aidecision/: __init__.py  capture.py  exceptions.py  models.py  store.py  wrapper.py
dashboard/: .env.local.example  middleware.ts  package.json
dashboard/app/: actions.ts  layout.tsx
dashboard/app/auth/callback/: route.ts
dashboard/app/auth/login/: page.tsx
dashboard/app/dashboard/: layout.tsx  page.tsx
dashboard/app/dashboard/api-keys/: CreateKeyForm.tsx  page.tsx
dashboard/app/dashboard/decisions/: page.tsx
dashboard/components/: Nav.tsx
demo/: index.html  package-lock.json  package.json
demo/src/: App.jsx
supabase/: config.toml  deploy.sh
supabase/functions/ingest/: index.ts
supabase/migrations/: 20260623000001_initial_schema.sql
tests/: run_tests.py  test_sdk.py
